# 3DRenderer

./: .gitignore  CMakeLists.txt
src/: Camera.cpp  Camera.h  Color.h  Object.h  Rasterizer.h  Renderer.cpp  Renderer.h  Runner.cpp  Runner.h  Screen.cpp  Screen.h  Types.cpp  Types.h  main.cpp
